force-app/main/default/objects/Product_Relationship__c/Product_Relationship__c.object-meta.xml
<CustomObject>
    <label>Product Relationship</label>
    <nameField>
        <displayFormat>ZR-{00000000}</displayFormat>
        <label>Product Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>