force-app/main/default/objects/Product_Relationship__c/fields/Current_ZProduct__c.field-meta.xml
<CustomField>
    <fullName>Current_ZProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When the selected Product is included on a Quote, this relationship rule will be checked and the Message will be displayed if the Related Product is in violation of either the include/exclude or the one/many settings.</description>
    <inlineHelpText>When the selected Product is included on a Quote, this relationship rule will be checked and the Message will be displayed if the Related Product is in violation of either the include/exclude or the one/many settings.</inlineHelpText>
    <label>Current ZProduct</label>
    <referenceTo>zqu__ZProduct__c</referenceTo>
    <relationshipLabel>Product Relationships</relationshipLabel>
    <relationshipName>Current_ZProduct</relationshipName>
    <type>Lookup</type>
</CustomField>