force-app/main/default/objects/Product_Relationship__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The text to be displayed when this relationship is not met</description>
    <inlineHelpText>The validation error message that will be displayed to the User.</inlineHelpText>
    <label>Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>