force-app/main/default/objects/Product_Relationship__c/fields/Related_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_SKU__c</fullName>
    <formula>Related_ZProduct__r.zqu__SKU__c</formula>
    <label>Related Product SKU</label>
    <type>Text</type>
</CustomField>