force-app/main/default/objects/Product_Relationship__c/fields/Related_ZProduct__c.field-meta.xml
<CustomField>
    <fullName>Related_ZProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Product must either be included/excluded on a Quote with the Current Product and can be purchased by a customer only once or many times, depending on the other settings on this form.</description>
    <inlineHelpText>This Product must either be included/excluded on a Quote with the Current Product and can be purchased by a customer only once or many times, depending on the other settings on this form.</inlineHelpText>
    <label>Related ZProduct</label>
    <referenceTo>zqu__ZProduct__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Product_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>