force-app/main/default/objects/Product_Relationship__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <description>Determines whether the customer record should be checked for an existing Product that matches the Related Product</description>
    <inlineHelpText>Many - The customer can purchase this product multiple times (e.g.: VeriSign Certificate)

Only One - The customer can purchase this product only once (e.g.: Admin Platform)</inlineHelpText>
    <label>Customer Can Have</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Many</fullName>
                <default>true</default>
                <label>Many</label>
            </value>
            <value>
                <fullName>Only One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>