force-app/main/default/objects/Product_Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Include - The Related Product must be included on a Quote whenever the Current Product exists

Exclude - The Related Product must NOT be included on a Quote whenever the Current Product exists</description>
    <inlineHelpText>Include - The Related Product must be included on a Quote whenever the Current Product exists

Exclude - The Related Product must NOT be included on a Quote whenever the Current Product exists</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
                <default>true</default>
                <label>Include</label>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>